--- a/cdx_vietnam/config/locales/views/home.vi.yml
+++ b/cdx_vietnam/config/locales/views/home.vi.yml
@@ -49,8 +49,8 @@ vi:
         one: "1 Vai trò"
         other: "%{count} Vai trò"
       roles_notice: 'Quản lý quyền hạn của người dùng với chính sách tái sử dụng'
-      sites: 'Trang'
-      sites_notice: 'Quản lý trang'
+      sites: 'Cơ sở'
+      sites_notice: 'Quản lý cơ sở'
       messages: 'Thông điệp'
       messages_notice: 'Quản lý nhật ký'
       models: 'Kiểu thiết bị'
