--- a/cdx_vietnam/config/locales/views/js_components.vi.yml
+++ b/cdx_vietnam/config/locales/views/js_components.vi.yml
@@ -63,8 +63,8 @@
       tooltip_description: "Mô tả về những đòi hỏi của cảnh báo."
       col_enabled: "Tình trạng kích hoạt"
       tooltip_enabled: "Cảnh báo này đã được kích hoạt chưa?"
-      col_sites: "Trang"
-      tooltip_sites: "Cảnh báo này sẽ được kích hoạt cho những trang nào."
+      col_sites: "Cơ sở"
+      tooltip_sites: "Cảnh báo này sẽ được kích hoạt cho những cơ sở nào."
       col_roles: "Vai trò"
       tooltip_roles: "Đôi điều về các vai trò."
       col_last_incident: "Sự cố sau cùng"
@@ -189,8 +189,8 @@
           lbl_history: "Lịch sử"
           lbl_drug: "Kháng thuốc"
           lbl_outcome: "Kết quả"
-          lbl_diagnosis_by_site: "Chẩn đoán phân loại bởi trang giải phẫu"
-          btn_edit: "Chỉnh sửa tập"
+          lbl_diagnosis_by_site: "Chẩn đoán phân loại bởi cơ sở tiếp nhận"
+          btn_edit: "Chỉnh sửa lần khám"
           msg_loading: "Đang tải lần khám..."
           msg_no_episode: "Không có lần khám."
 
