--- a/cdx_vietnam/config/locales/views/addresses.vi.yml
+++ b/cdx_vietnam/config/locales/views/addresses.vi.yml
@@ -3,12 +3,12 @@ vi:
     form:
       street_tooltip:   'Địa chỉ'
       city_tooltip:     'Thành phố/Tỉnh'
-      state_tooltip:    'Quận/Huyện'
+      state_tooltip:    'Vùng'
       country_tooltip:     'Quốc gia'
       zip_code_tooltip: 'Mã bưu chính/Mã bưu điện'
       address: 'Địa chỉ'
       city: 'Thành phố/Tỉnh'
-      state: 'Quận/Huyện'
+      state: 'Vùng'
       zip_code: 'Mã bưu điện'
       address_prefix: ''
       address1_prefix: 'Thường trú '
