--- a/cdx_vietnam/config/locales/views/dashboard.vi.yml
+++ b/cdx_vietnam/config/locales/views/dashboard.vi.yml
@@ -8,8 +8,8 @@ vi:
       filter_button: 'Thiết lập lại bộ lọc'
       total_tests: 'Tổng số xét nghiệm'
       failed_tests: 'xét nghiệm thất bại'
-      total_tests_by_site: 'Tổng số xét nghiệm bởi trang web'
-      average_tests_by_site: 'Bình quân các xét nghiệm bởi trang web'
+      total_tests_by_site: 'Tổng số xét nghiệm bởi cơ sở'
+      average_tests_by_site: 'Bình quân các xét nghiệm bởi cơ sở'
       total_tests_by_device: 'Tổng số xét nghiệm bởi thiết bị'
       average_tests_by_technician: 'Bình quân các xét nghiệm bởi kỹ thuật viên'
       outstanding_tests: 'Các xét nghiệm nổi bật'
