--- a/cdx_core/config/locales/views/test_results.en.yml
+++ b/cdx_core/config/locales/views/test_results.en.yml
@@ -63,7 +63,7 @@ en:
       test_results: 'test results'
       setup_devices: 'Setup your devices first in order to start reporting.'
       manual_results: 'You can add requested tests in your test orders.'
-      tab_device: 'Devices'
+      tab_device: 'Orphan tests'
       tab_microscopy: 'Microscopy'
       tab_xpert: 'Xpert'
       tab_culture: 'Culture'
