2609 Change date column in test results.

--- a/cdx_core/config/locales/views/js_components.en.yml
+++ b/cdx_core/config/locales/views/js_components.en.yml
@@ -273,8 +273,8 @@ en:
       col_type: "Type"
       col_status: "Status"
       col_err_code: "Error code"
-      col_start_time: "Start time"
-      col_end_time: "End time"
+      col_start_time: "CDP:Creation date"
+      col_end_time: "End date"
       col_tuber: "Tuberculosis"
       col_trace: "Trace"
       col_rifampicin: "Rifampicin"
