--- a/cdx_core/config/locales/views/test_orders.en.yml
+++ b/cdx_core/config/locales/views/test_orders.en.yml
@@ -7,7 +7,7 @@ en:
       no_test_orders: 'No test orders have been created'
       test_order:
         zero: 'Test orders'
-        one: 'Test order'
+        one: '1 Test order'
         other: '%{count} Test orders'
     filters:
       show_all: 'Show all'
