Use new presenter for test results.

--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -96,6 +96,15 @@ en:
         low: 'Low'
         medium: 'Medium'
         high: 'High'
+    test_results:
+      result_type:
+        positive: 'Positive'
+        negative: 'Negative'
+        indeterminate: 'Indeterminate'
+        not_applicable: 'Not applicable'
+      result_status:
+        success: 'Success'
+        error: 'Error'
     user:
       status_options:
         show_all: 'Show all'
