--- a/cdx_vietnam/config/locales/select.vi.yml
+++ b/cdx_vietnam/config/locales/select.vi.yml
@@ -96,6 +96,15 @@ vi:
         low: 'Ít'
         medium: 'Vừa'
         high: 'Cao'
+    test_results:
+      result_type:
+        positive: 'Positive'
+        negative: 'Negative'
+        indeterminate: 'Indeterminate'
+        not_applicable: 'Not applicable'
+      result_status:
+        success: 'Success'
+        error: 'Error'
     user:
       status_options:
         show_all: 'Hiện tất cả'
