--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -102,6 +102,7 @@ en:
         negative: 'Negative'
         indeterminate: 'Indeterminate'
         n/a: 'Not applicable'
+        not_applicable: 'Not applicable'
       result_status:
         success: 'Success'
         error: 'Error'
