--- a/cdx_core/config/locales/views/test_results.en.yml
+++ b/cdx_core/config/locales/views/test_results.en.yml
@@ -38,6 +38,7 @@ en:
       test_performed_on: 'Test performed on'
       by: 'by'
       at: 'at'
+      id: 'Test ID'
       assays: 'Assays'
       additional_data: 'Additional data'
       sample: 'Sample'
