fix wrong translate in vietnamese

--- a/cdx_vietnam/config/locales/models/cdx_vietnam/patient.vi.yml
+++ b/cdx_vietnam/config/locales/models/cdx_vietnam/patient.vi.yml
@@ -4,4 +4,4 @@ vi:
       patient:
         name: 'Tên *'
         social_security_code: 'CMND *'
-        vitimes_id: 'Mã bệnh nhân vitimes'
+        vitimes_id: 'Mã bệnh nhân Vitimes/E-TB'
