--- a/cdx_vietnam/config/locales/views/addresses.vi.yml
+++ b/cdx_vietnam/config/locales/views/addresses.vi.yml
@@ -6,11 +6,11 @@ vi:
       state_tooltip:    'Vùng'
       country_tooltip:     'Quốc gia'
       zip_code_tooltip: 'Mã bưu chính/Mã bưu điện'
-      address: 'Địa chỉ'
+      address: ''
       city: 'Thành phố/Tỉnh'
       state: 'Vùng'
       zip_code: 'Mã bưu điện'
       address_prefix: ''
-      address1_prefix: 'Thường trú '
-      address2_prefix: 'Liên hệ '
+      address1_prefix: 'Địa chỉ thường trú'
+      address2_prefix: 'Địa chỉ liên hệ'
       country: 'Quốc gia'
