Show test order if device message is linked.

--- a/cdx_core/config/locales/views/js_components.en.yml
+++ b/cdx_core/config/locales/views/js_components.en.yml
@@ -81,6 +81,7 @@ en:
       false: 'Pending'
       true: 'Done'
     test_order:
+      header: 'Test order'
       new: 'New'
       pending: 'Pending'
       financed: 'Financed'
