--- a/cdx_core/config/locales/views/js_components.en.yml
+++ b/cdx_core/config/locales/views/js_components.en.yml
@@ -274,7 +274,7 @@ en:
       col_type: "Type"
       col_status: "Status"
       col_err_code: "Error code"
-      col_start_time: "CDP:Creation date"
+      col_start_time: "Start date"
       col_end_time: "End date"
       col_tuber: "Tuberculosis"
       col_trace: "Trace"
