--- a/cdx_vietnam/config/locales/models/patient.en.yml
+++ b/cdx_vietnam/config/locales/models/patient.en.yml
@@ -4,6 +4,12 @@ en:
       patient:
         social_security_code: 'CMND'
         nationality: 'Nationality'
+    errors:
+      models:
+        patient:
+          attributes:
+            social_security_code:
+              cmnd_validation: 'should be between 9 and 15 characters long.'
   patient:
     validations:
       cmnd: 'should be between 9 and 15 characters long.'
