--- a/cdx_core/config/locales/models/microscopy_result.en.yml
+++ b/cdx_core/config/locales/models/microscopy_result.en.yml
@@ -12,3 +12,4 @@ en:
         test_result: 'Result'
         sample_identifier_id: 'Sample ID'
         feedback_message_id: 'Feedback message'
+        comment: 'Comment'
