Order status graph.

--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -44,6 +44,8 @@ en:
         pending_approval: 'Pending approval'
         rejected: 'Rejected'
         completed: 'Completed'
+        error: 'Error'
+        success: 'Success'
     microscopy:
       visual_appearance:
         blood: 'Blood-stained'
