--- a/cdx_core/config/locales/views/dashboard.en.yml
+++ b/cdx_core/config/locales/views/dashboard.en.yml
@@ -19,3 +19,4 @@ en:
       drtb_percentage: 'DR-TB percentage'
       drug_resistance: 'Drug resistance percentage'
       chart_note: 'This particular charts have been derived from Xpert only results and percentages may not be accurate at a population level unless all TB tests have utilised Xpert.'
+      daily_order_status: 'Order status'
