Add patient id and update date format in test orders csv.

--- a/cdx_core/config/locales/views/test_orders.en.yml
+++ b/cdx_core/config/locales/views/test_orders.en.yml
@@ -23,5 +23,6 @@ en:
       old_state: 'Previous state'
       new_state: 'Current state'
       created_at: 'Date'
+      patient_id: 'Patient ID'
     update:
       not_allowed: "You don't have permission to update this test order."
