--- a/cdx_core/config/locales/views/patients.en.yml
+++ b/cdx_core/config/locales/views/patients.en.yml
@@ -85,3 +85,15 @@ en:
         zero: 'No patients'
         one:  'One patient'
         other: '%{count} patients'
+    csv_export:
+      patient_id: 'Patient ID'
+      created_at: 'Date of creation'
+      site_id: 'Site ID'
+      etb_patient_id: 'ETB Patient ID'
+      vtm_patient_id: 'VITIMES Patient ID'
+      social_security_code: 'CMND'
+      entity_id: 'VITIMES/ETB Manager log ID'
+      external_id: 'External ID'
+      gender: 'Gender'
+      address: 'Address'
+      nationality: 'Nationality'
