--- a/cdx_core/config/locales/models/encounter.en.yml
+++ b/cdx_core/config/locales/models/encounter.en.yml
@@ -5,6 +5,15 @@ en:
     attributes:
       encounter:
         id: 'Test order ID'
+        batch_id: 'Test order ID'
+        site_id: 'Site'
+        performing_site_id: 'Performing site'
+        sample_id: 'Sample'
+        testing_for: 'Testing for'
+        user_id: 'User'
+        start_time: 'Start time'
+        testdue_date: 'Test due date'
+        status: 'Status'
   encounters:
     status:
       new: 'New'
