Fix xpert results csv export.

--- a/cdx_core/config/locales/models/dst_lpa_result.en.yml
+++ b/cdx_core/config/locales/models/dst_lpa_result.en.yml
@@ -2,6 +2,7 @@ en:
   activerecord:
     attributes:
       dst_lpa_result:
+        id: 'Test ID'
         result_status: 'Status'
         sample_collected_at: 'Date sample collected'
         media_used: 'Method'
