--- a/cdx_core/config/locales/models/encounter.en.yml
+++ b/cdx_core/config/locales/models/encounter.en.yml
@@ -2,6 +2,9 @@ en:
   activerecord:
     model:
       encounter: 'Test order'
+    attributes:
+      encounter:
+        id: 'Test order ID'
   encounters:
     status:
       new: 'New'
