--- a/cdx_core/config/locales/models/culture_result.en.yml
+++ b/cdx_core/config/locales/models/culture_result.en.yml
@@ -2,6 +2,7 @@ en:
   activerecord:
     attributes:
       culture_result:
+        id: 'Test ID'
         result_status: 'Status'
         sample_collected_at: 'Date sample collected'
         examined_by: 'Examined by'
