Ensure csv files have hostaname included.

--- a/cdx_core/config/locales/views/culture_results.en.yml
+++ b/cdx_core/config/locales/views/culture_results.en.yml
@@ -21,4 +21,4 @@ en:
       serial_number: 'Serial number'
       test_result: 'Test result'
       examined_by: 'Examined by'
-      result_at: 'Result on'
+      result_at: 'Date of result'
