--- a/cdx_core/config/locales/views/js_components.en.yml
+++ b/cdx_core/config/locales/views/js_components.en.yml
@@ -253,7 +253,7 @@ en:
       col_exam_by: "Examined by"
       col_media_used: "Media used"
       col_test_result: "Test result"
-      col_result_at: "Result on"
+      col_result_at: "Date of result"
       col_h: "Results H"
       col_r: "Results R"
       col_e: "Results E"
@@ -262,7 +262,7 @@ en:
       col_km: "Results Km"
       col_cm: "Results Cm"
       col_fq: "Results Fq"
-      col_on: "Result on"
+      col_on: "Date of result"
       col_specimen: "Specimen type"
       col_appearance: "Appearance"
       col_test: "Test"
