Return error message if empty sample ids.

--- a/cdx_core/config/locales/views/samples.en.yml
+++ b/cdx_core/config/locales/views/samples.en.yml
@@ -2,3 +2,4 @@ en:
   samples:
     collect_samples:
       sample_exists: 'Sample: %{sample_id} has already been added to the test order.'
+      no_samples: 'Sample list is empty. Please add a sample id to this test order.'
