--- a/cdx_core/README.rdoc
+++ b/cdx_core/README.rdoc
@@ -6,11 +6,11 @@ To customise the application for other countries add an engine called cdx_countr
 
 === Technical debt
 
-* Update Travis CI.
+* ~~Update Travis CI.~~
 * Update ruby to 2.2.3
-* Ensure all content in main app should belong to there or can be moved to an engine. (API, Jobs)
+* ~~Ensure all content in main app should belong to there or can be moved to an engine. (API, Jobs)~~
 * Remove decent exposure.  Not used in most of the app. Only in the API.
-* Remove elasticsearch. Almost done.  Need to import device results into test results in a better way and then update the dashboard reports.
+* ~~Remove elasticsearch. Almost done.  Need to import device results into test results in a better way and then update the dashboard reports.~~
 * Remove view_components. Remove all components created with define_component (ApplicationHelper).
 * Do we need all monkey patching in config/initializers ? :-(
 * Many gems in cdx_core/Gemfile are also bundled in cdx/Gemfile. Avoid duplication.
